--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,11 @@ body {
     text-align: center;
     width: 80%;
     margin: auto;
+    margin-top: 48px;
+    margin-bottom: 48px;
+    background: #F9F9FB;
 }
+
 
 h2 {
     font-style: italic;
@@ -12,10 +16,14 @@ h2 {
     margin-bottom: 36px;
 }
 
+h3 {
+    margin: 24px;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 16px;
     width: 90%;
     max-width: 1200px;
     margin-left: auto;
@@ -24,7 +32,6 @@ h2 {
 
 .grid-item {
     position: relative;
-    border: 2px solid #ccc; /* Add border to grid items */
     border-radius: 5px; /* Optional: Add border radius for rounded corners */
     overflow: hidden; /* Ensure content does not overflow the border */
     background-color: #fff; /* Optional: Add background color to grid items */
@@ -37,30 +44,26 @@ h2 {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add shadow */
     transition: box-shadow 0.3s ease; /* Smooth transition for shadow */
     width: 100%;
-    height: 100%;
+    height: 240px;
 }
 
-.grid-item img {
+.grid-item a {
     width: 100%;
     height: 100%;
+    display: block;
+}
+
+.grid-item img {  
+    width: calc(100% - 20px);
+    height: calc(100% - 10px);
+    padding: 10px;
     object-fit: contain; 
     display: block;
 }
 
-.grid-item h3 {
-    margin: 0; /* Remove default margin */
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    width: 100%;
-    text-align: center; /* Center align the text */
-    position: absolute;
-    bottom: 0;
-}
 
 .grid-item:hover {
-    border-color: #007BFF; /* Change border color on hover */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+    box-shadow: 0 8px 14px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
 }
 
 @media (max-width: 768px) {
