--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,10 @@ h3 {
     height: 240px;
 }
 
+.grid-item:last-child {
+    grid-column-start: 2;
+}
+
 .grid-item a {
     width: 100%;
     height: 100%;
@@ -70,4 +74,9 @@ h3 {
     .grid-container {
         grid-template-columns: 1fr;
     }
+
+    .grid-item:last-child {
+        grid-column-start: 1;
+    }
+    
 }
