--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,29 @@ h3 {
     margin: 24px;
 }
 
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: #007BFF;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+}
+.button:hover {
+    background-color: #0056b3;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+    transform: translateY(-2px);
+}
+.button:active {
+    background-color: #004494;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transform: translateY(0);
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -44,7 +67,7 @@ h3 {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add shadow */
     transition: box-shadow 0.3s ease; /* Smooth transition for shadow */
     width: 100%;
-    height: 240px;
+    height: 200px;
 }
 
 .grid-item:last-child {
@@ -58,9 +81,9 @@ h3 {
 }
 
 .grid-item img {  
-    width: calc(100% - 20px);
-    height: calc(100% - 10px);
-    padding: 10px;
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
+    padding: 20px;
     object-fit: contain; 
     display: block;
 }
