--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,17 @@ h2 {
 }
 
 h3 {
-    margin: 24px;
+    margin-top: 48px;
+    margin-bottom: 24px;
+}
+
+.demo {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    width: 480px;
+    display:block;
+    margin-bottom: 24px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .button {
